[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/PowerBar.gd" type="Script" id=1]
[ext_resource path="res://scripts/Label.gd" type="Script" id=2]
[ext_resource path="res://scripts/VSlider.gd" type="Script" id=3]
[ext_resource path="res://scenes/Fragment.tscn" type="PackedScene" id=4]

[node name="PlayerHud" type="CanvasLayer"]

[node name="GravitySlider" type="VSlider" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -65.0
margin_top = -41.0
margin_right = -49.0
margin_bottom = 52.0
rect_scale = Vector2( 2, 2 )
min_value = -1000.0
max_value = 1000.0
value = 1000.0
tick_count = 2
script = ExtResource( 3 )

[node name="TimeSlow" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -76.0
margin_top = 18.0
margin_right = -40.0
margin_bottom = 55.0
focus_mode = 0
enabled_focus_mode = 0

[node name="Fragment" parent="." instance=ExtResource( 4 )]
position = Vector2( 59, 47 )
scale = Vector2( 3, 3 )
z_index = 0

[node name="PowerTimer" type="Timer" parent="."]
one_shot = true

[node name="PowerBar" type="ProgressBar" parent="."]
margin_left = 678.0
margin_top = 17.0
margin_right = 924.0
margin_bottom = 54.0
rect_min_size = Vector2( 50, 1 )
max_value = 5.0
percent_visible = false
script = ExtResource( 1 )

[node name="FragmentsCount" type="Label" parent="."]
margin_left = 47.0
margin_top = 59.0
margin_right = 94.0
margin_bottom = 73.0
text = "iuyoiuif"
script = ExtResource( 2 )

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="pressed" from="TimeSlow" to="GravitySlider" method="_on_TimeSlow_pressed"]
[connection signal="pressed" from="TimeSlow" to="PowerBar" method="_on_TimeSlow_pressed"]
[connection signal="timeout" from="PowerTimer" to="GravitySlider" method="_on_PowerTimer_timeout"]
[connection signal="timeout" from="CooldownTimer" to="GravitySlider" method="_on_CooldownTimer_timeout"]
